--- a/app/front/src/styles/Login.css
+++ b/app/front/src/styles/Login.css
@@ -5,7 +5,11 @@
     --bg-color: #fff;
     --bg-color-alt: #666;
     --main-color: #323232;
+      /* display: flex; */
+      /* flex-direction: column; */
+      /* align-items: center; */
   }
+  /* switch card */
   .switch {
     transform: translateY(-200px);
     position: relative;
@@ -92,6 +96,7 @@
     text-decoration: underline;
   }
   
+  /* card */ 
   
   .flip-card__inner {
     width: 300px;
@@ -99,6 +104,8 @@
     position: relative;
     background-color: transparent;
     perspective: 1000px;
+      /* width: 100%;
+      height: 100%; */
     text-align: center;
     transition: transform 0.8s;
     transform-style: preserve-3d;
